--- a/recipe-book/public/index.html
+++ b/recipe-book/public/index.html
@@ -14,8 +14,12 @@
 			integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
 			crossorigin="anonymous"
 		/>
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css"
+		/>
 
-		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+		<link rel="icon" href="./recipe-book-logo.svg" />
 		<!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -30,7 +34,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-		<title>React App</title>
+		<title>Recipe Book</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
